Fix image stretching fo rmobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -195,6 +195,8 @@ a {
   box-shadow: 5px 5px var(--pink);
   border: 1px solid var(--black);
   height: auto;
+  align-self: flex-start;
+  max-width: 100%;
 }
 /*media queries for blog page - if screen is 1050px or bigger line p1 and image1 up next to each other*/
 @media (min-width: 1050px) {
